--- a/Tienda/src/main/resources/com/svalero/tienda/tienda/tienda.fxml
+++ b/Tienda/src/main/resources/com/svalero/tienda/tienda/tienda.fxml
@@ -25,21 +25,21 @@
             <content>
               <AnchorPane fx:id="productNameField" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <Button fx:id="pNuevoButton" layoutX="23.0" layoutY="254.0" mnemonicParsing="false" onAction="#nuevoProducto" text="Nuevo" />
-                        <Button fx:id="pGuardarButton" layoutX="92.0" layoutY="254.0" mnemonicParsing="false" onAction="#guardarProducto" text="Guardar" />
-                        <Button fx:id="pEliminarButton" layoutX="241.0" layoutY="254.0" mnemonicParsing="false" onAction="#eliminarProducto" text="Eliminar" />
-                        <Button fx:id="pModificarButton" layoutX="166.0" layoutY="254.0" mnemonicParsing="false" onAction="#modificarProducto" text="Modificar" />
+                        <Button fx:id="pNuevoButton" layoutX="23.0" layoutY="266.0" mnemonicParsing="false" onAction="#nuevoProducto" text="Nuevo" />
+                        <Button fx:id="pGuardarButton" disable="true" layoutX="92.0" layoutY="266.0" mnemonicParsing="false" onAction="#guardarProducto" text="Guardar" />
+                        <Button fx:id="pEliminarButton" layoutX="241.0" layoutY="266.0" mnemonicParsing="false" onAction="#eliminarProducto" text="Eliminar" />
+                        <Button fx:id="pModificarButton" layoutX="166.0" layoutY="266.0" mnemonicParsing="false" onAction="#modificarProducto" text="Modificar" />
                         <ListView fx:id="pListView" layoutX="308.0" layoutY="20.0" prefHeight="282.0" prefWidth="280.0" />
-                        <TextField fx:id="pNombreField" layoutX="77.0" layoutY="37.0" />
-                        <TextField fx:id="pTipoField" layoutX="77.0" layoutY="74.0" />
-                        <TextField fx:id="pPrecioField" layoutX="74.0" layoutY="114.0" />
+                        <TextField fx:id="pNombreField" editable="false" layoutX="77.0" layoutY="37.0" />
+                        <TextField fx:id="pTipoField" editable="false" layoutX="77.0" layoutY="74.0" />
+                        <TextField fx:id="pPrecioField" editable="false" layoutX="74.0" layoutY="114.0" />
                         <Label layoutX="16.0" layoutY="41.0" text="Nombre*" />
                         <Label layoutX="23.0" layoutY="152.0" text="Stock" />
                         <Label layoutX="21.0" layoutY="118.0" text="Precio*" />
                         <Label layoutX="26.0" layoutY="78.0" text="Tipo" />
                         <Label layoutX="17.0" layoutY="196.0" text="Descripción" />
-                        <TextArea fx:id="pDescripcionTArea" layoutX="92.0" layoutY="185.0" prefHeight="58.0" prefWidth="191.0" />
-                        <CheckBox fx:id="pStockCheckBox" layoutX="84.0" layoutY="155.0" mnemonicParsing="false" />
+                        <CheckBox fx:id="pStockCheckBox" disable="true" layoutX="84.0" layoutY="155.0" mnemonicParsing="false" />
+                        <TextArea fx:id="pDescripcionTArea" editable="false" layoutX="84.0" layoutY="190.0" prefHeight="59.0" prefWidth="200.0" />
                      </children>
                   </AnchorPane>
             </content>
