--- a/Tienda/src/main/resources/com/svalero/tienda/tienda/tienda.fxml
+++ b/Tienda/src/main/resources/com/svalero/tienda/tienda/tienda.fxml
@@ -25,21 +25,21 @@
             <content>
               <AnchorPane fx:id="productNameField" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <Button fx:id="pNuevoButton" layoutX="23.0" layoutY="266.0" mnemonicParsing="false" onAction="#nuevoProducto" text="Nuevo" />
-                        <Button fx:id="pGuardarButton" disable="true" layoutX="92.0" layoutY="266.0" mnemonicParsing="false" onAction="#guardarProducto" text="Guardar" />
-                        <Button fx:id="pEliminarButton" layoutX="241.0" layoutY="266.0" mnemonicParsing="false" onAction="#eliminarProducto" text="Eliminar" />
-                        <Button fx:id="pModificarButton" layoutX="166.0" layoutY="266.0" mnemonicParsing="false" onAction="#modificarProducto" text="Modificar" />
+                        <Button fx:id="pNuevoButton" layoutX="23.0" layoutY="254.0" mnemonicParsing="false" onAction="#nuevoProducto" text="Nuevo" />
+                        <Button fx:id="pGuardarButton" layoutX="92.0" layoutY="254.0" mnemonicParsing="false" onAction="#guardarProducto" text="Guardar" />
+                        <Button fx:id="pEliminarButton" layoutX="241.0" layoutY="254.0" mnemonicParsing="false" onAction="#EliminarProducto" text="Eliminar" />
+                        <Button fx:id="pModificarButton" layoutX="166.0" layoutY="254.0" mnemonicParsing="false" onAction="#modificarProducto" text="Modificar" />
                         <ListView fx:id="pListView" layoutX="308.0" layoutY="20.0" prefHeight="282.0" prefWidth="280.0" />
-                        <TextField fx:id="pNombreField" editable="false" layoutX="77.0" layoutY="37.0" />
-                        <TextField fx:id="pTipoField" editable="false" layoutX="77.0" layoutY="74.0" />
-                        <TextField fx:id="pPrecioField" editable="false" layoutX="74.0" layoutY="114.0" />
+                        <TextField fx:id="pNombreField" layoutX="77.0" layoutY="37.0" />
+                        <TextField fx:id="pTipoField" layoutX="77.0" layoutY="74.0" />
+                        <TextField fx:id="pPrecioField" layoutX="74.0" layoutY="114.0" />
                         <Label layoutX="16.0" layoutY="41.0" text="Nombre*" />
                         <Label layoutX="23.0" layoutY="152.0" text="Stock" />
                         <Label layoutX="21.0" layoutY="118.0" text="Precio*" />
                         <Label layoutX="26.0" layoutY="78.0" text="Tipo" />
                         <Label layoutX="17.0" layoutY="196.0" text="Descripción" />
-                        <CheckBox fx:id="pStockCheckBox" disable="true" layoutX="84.0" layoutY="155.0" mnemonicParsing="false" />
-                        <TextArea fx:id="pDescripcionTArea" editable="false" layoutX="84.0" layoutY="190.0" prefHeight="59.0" prefWidth="200.0" />
+                        <TextField fx:id="pDescripcionTArea" layoutX="92.0" layoutY="185.0" prefHeight="58.0" prefWidth="191.0" />
+                        <CheckBox fx:id="pStockCheckBox" layoutX="84.0" layoutY="155.0" mnemonicParsing="false" />
                      </children>
                   </AnchorPane>
             </content>
@@ -92,11 +92,26 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <TableView layoutX="10.0" layoutY="5.0" prefHeight="319.0" prefWidth="571.0">
+                        <TableView fx:id="pedTableView" layoutX="10.0" layoutY="5.0" prefHeight="160.0" prefWidth="571.0">
                           <columns>
-                            <TableColumn prefWidth="285.7143249511719" text="C1" />
-                            <TableColumn prefWidth="283.42852783203125" text="C2" />
+                            <TableColumn fx:id="vNumeroPedido" prefWidth="285.7143249511719" text="Numero de pedido" />
+                            <TableColumn fx:id="vEntregado" prefWidth="283.42852783203125" text="Entregado" />
+                              <TableColumn fx:id="vFechaPedido" prefWidth="283.42852783203125" text="Fecha de pedido" />
+                              <TableColumn fx:id="vPrecio" prefWidth="283.42852783203125" text="Precio" />
+                              <TableColumn fx:id="vObservaciones" prefWidth="283.42852783203125" text="Observaciones" />
                           </columns>
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
+                        </TableView>
+                        <TableView fx:id="cliTableView" layoutX="10.0" layoutY="165.0" prefHeight="164.0" prefWidth="571.0">
+                           <columns>
+                              <TableColumn fx:id="vNombre" prefWidth="285.7143249511719" text="Nombre" />
+                              <TableColumn fx:id="vApellidos" prefWidth="283.42852783203125" text="Apellidos" />
+                              <TableColumn fx:id="vFechaNacimiento" prefWidth="283.42852783203125" text="Fecha de nacimiento" />
+                              <TableColumn fx:id="vEmail" prefWidth="283.42852783203125" text="Email" />
+                              <TableColumn fx:id="vTelefono" prefWidth="283.42852783203125" text="Telefono" />
+                           </columns>
                            <columnResizePolicy>
                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                            </columnResizePolicy>
