--- a/Tienda/src/main/resources/com/svalero/tienda/tienda/tienda.fxml
+++ b/Tienda/src/main/resources/com/svalero/tienda/tienda/tienda.fxml
@@ -49,20 +49,20 @@
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
                         <Button fx:id="pedNuevoButton" layoutX="37.0" layoutY="281.0" mnemonicParsing="false" onAction="#nuevoPedido" text="Nuevo" />
-                        <DatePicker fx:id="pedFechaDatePicker" layoutX="122.0" layoutY="229.0" prefHeight="25.0" prefWidth="149.0" />
+                        <DatePicker fx:id="pedFechaDatePicker" disable="true" editable="true" layoutX="122.0" layoutY="229.0" prefHeight="25.0" prefWidth="149.0" />
                         <ListView fx:id="pedListView" layoutX="18.0" layoutY="14.0" prefHeight="114.0" prefWidth="569.0" />
                         <Label layoutX="32.0" layoutY="143.0" text="Número pedido*" />
-                        <TextField fx:id="pedNumField" layoutX="134.0" layoutY="139.0" prefHeight="25.0" prefWidth="125.0" />
+                        <TextField fx:id="pedNumField" editable="false" layoutX="134.0" layoutY="139.0" prefHeight="25.0" prefWidth="125.0" />
                         <Button fx:id="pedEliminarButton" layoutX="265.0" layoutY="281.0" mnemonicParsing="false" onAction="#eliminarPedido" text="Eliminar" />
                         <Button fx:id="pedModificarButton" layoutX="178.0" layoutY="281.0" mnemonicParsing="false" onAction="#modificarPedido" text="Modificar" />
                         <Button fx:id="pedGuardarButton" layoutX="102.0" layoutY="281.0" mnemonicParsing="false" onAction="#guardarPedido" text="Guardar" />
                         <Label layoutX="39.0" layoutY="233.0" text="Fecha pedido" />
                         <Label layoutX="47.0" layoutY="185.0" text="Entregado" />
                         <Label layoutX="363.0" layoutY="143.0" text="Precio*" />
-                        <TextField fx:id="pedPrecioField" layoutX="419.0" layoutY="139.0" prefHeight="25.0" prefWidth="125.0" />
-                        <CheckBox fx:id="pedEntregadoCheckBox" layoutX="125.0" layoutY="185.0" mnemonicParsing="false" />
+                        <TextField fx:id="pedPrecioField" editable="false" layoutX="419.0" layoutY="139.0" prefHeight="25.0" prefWidth="125.0" />
+                        <CheckBox fx:id="pedEntregadoCheckBox" disable="true" layoutX="125.0" layoutY="185.0" mnemonicParsing="false" />
                         <Label layoutX="363.0" layoutY="176.0" text="Observaciones" />
-                        <TextArea fx:id="pedObsTArea" layoutX="363.0" layoutY="204.0" prefHeight="100.0" prefWidth="200.0" />
+                        <TextArea fx:id="pedObsTArea" editable="false" layoutX="363.0" layoutY="204.0" prefHeight="100.0" prefWidth="200.0" />
                      </children></AnchorPane>
                </content>
             </Tab>
@@ -80,10 +80,10 @@
                         <Button fx:id="cEliminarButton" layoutX="231.0" layoutY="264.0" mnemonicParsing="false" onAction="#eliminarCliente" text="Eliminar" />
                         <Button fx:id="cModificarButton" layoutX="156.0" layoutY="264.0" mnemonicParsing="false" onAction="#modificarCliente" text="Modificar" />
                         <ListView fx:id="cListView" layoutX="302.0" layoutY="27.0" prefHeight="286.0" prefWidth="286.0" />
-                        <TextField fx:id="cNombreField" layoutX="72.0" layoutY="33.0" />
-                        <TextField fx:id="cEmailField" layoutX="82.0" layoutY="163.0" />
-                        <TextField fx:id="cApellidosField" layoutX="82.0" layoutY="71.0" />
-                        <TextField fx:id="cTelefonoField" layoutX="82.0" layoutY="212.0" />
+                        <TextField fx:id="cNombreField" editable="false" layoutX="72.0" layoutY="33.0" />
+                        <TextField fx:id="cEmailField" editable="false" layoutX="82.0" layoutY="163.0" />
+                        <TextField fx:id="cApellidosField" editable="false" layoutX="82.0" layoutY="71.0" />
+                        <TextField fx:id="cTelefonoField" editable="false" layoutX="82.0" layoutY="212.0" />
                         <DatePicker fx:id="cFechaDatePicker" layoutX="134.0" layoutY="112.0" prefHeight="25.0" prefWidth="141.0" />
                      </children></AnchorPane>
                </content>
