--- a/Tienda/src/main/resources/com/svalero/tienda/tienda/tienda.fxml
+++ b/Tienda/src/main/resources/com/svalero/tienda/tienda/tienda.fxml
@@ -29,7 +29,7 @@
                         <Button fx:id="pGuardarButton" layoutX="92.0" layoutY="254.0" mnemonicParsing="false" onAction="#guardarProducto" text="Guardar" />
                         <Button fx:id="pEliminarButton" layoutX="241.0" layoutY="254.0" mnemonicParsing="false" onAction="#eliminarProducto" text="Eliminar" />
                         <Button fx:id="pModificarButton" layoutX="166.0" layoutY="254.0" mnemonicParsing="false" onAction="#modificarProducto" text="Modificar" />
-                        <ListView fx:id="pListView" layoutX="308.0" layoutY="20.0" onMouseClicked="#productosClick" prefHeight="282.0" prefWidth="280.0" />
+                        <ListView fx:id="pListView" layoutX="308.0" layoutY="20.0" prefHeight="282.0" prefWidth="280.0" />
                         <TextField fx:id="pNombreField" editable="false" layoutX="77.0" layoutY="37.0" />
                         <TextField fx:id="pTipoField" editable="false" layoutX="77.0" layoutY="74.0" />
                         <TextField fx:id="pPrecioField" editable="false" layoutX="74.0" layoutY="114.0" />
@@ -39,7 +39,7 @@
                         <Label layoutX="26.0" layoutY="78.0" text="Tipo" />
                         <Label layoutX="17.0" layoutY="196.0" text="Descripción" />
                         <CheckBox fx:id="pStockCheckBox" disable="true" layoutX="84.0" layoutY="155.0" mnemonicParsing="false" />
-                        <TextArea fx:id="pDescripcionTArea" editable="false" layoutX="84.0" layoutY="196.0" prefHeight="46.0" prefWidth="200.0" />
+                        <TextArea fx:id="pDescripcionTArea" editable="false" layoutX="84.0" layoutY="184.0" prefHeight="58.0" prefWidth="200.0" />
                      </children>
                   </AnchorPane>
             </content>
@@ -49,8 +49,8 @@
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
                         <Button fx:id="pedNuevoButton" layoutX="37.0" layoutY="281.0" mnemonicParsing="false" onAction="#nuevoPedido" text="Nuevo" />
-                        <DatePicker fx:id="pedFechaDatePicker" disable="true" editable="true" layoutX="122.0" layoutY="229.0" prefHeight="25.0" prefWidth="149.0" />
-                        <ListView fx:id="pedListView" layoutX="18.0" layoutY="14.0" prefHeight="114.0" prefWidth="569.0" />
+                        <DatePicker fx:id="pedFechaDatePicker" disable="true" layoutX="122.0" layoutY="229.0" prefHeight="25.0" prefWidth="149.0" />
+                        <ListView fx:id="pedListView" layoutX="18.0" layoutY="14.0" onMouseClicked="#pedidosClick" prefHeight="114.0" prefWidth="569.0" />
                         <Label layoutX="32.0" layoutY="143.0" text="Número pedido*" />
                         <TextField fx:id="pedNumField" editable="false" layoutX="134.0" layoutY="139.0" prefHeight="25.0" prefWidth="125.0" />
                         <Button fx:id="pedEliminarButton" layoutX="265.0" layoutY="281.0" mnemonicParsing="false" onAction="#eliminarPedido" text="Eliminar" />
@@ -79,12 +79,12 @@
                         <Button fx:id="cGuardarButton" layoutX="82.0" layoutY="264.0" mnemonicParsing="false" onAction="#guardarCliente" text="Guardar" />
                         <Button fx:id="cEliminarButton" layoutX="231.0" layoutY="264.0" mnemonicParsing="false" onAction="#eliminarCliente" text="Eliminar" />
                         <Button fx:id="cModificarButton" layoutX="156.0" layoutY="264.0" mnemonicParsing="false" onAction="#modificarCliente" text="Modificar" />
-                        <ListView fx:id="cListView" layoutX="302.0" layoutY="27.0" prefHeight="286.0" prefWidth="286.0" />
+                        <ListView fx:id="cListView" layoutX="302.0" layoutY="27.0" onMouseClicked="#clientesClick" prefHeight="286.0" prefWidth="286.0" />
                         <TextField fx:id="cNombreField" editable="false" layoutX="72.0" layoutY="33.0" />
                         <TextField fx:id="cEmailField" editable="false" layoutX="82.0" layoutY="163.0" />
                         <TextField fx:id="cApellidosField" editable="false" layoutX="82.0" layoutY="71.0" />
                         <TextField fx:id="cTelefonoField" editable="false" layoutX="82.0" layoutY="212.0" />
-                        <DatePicker fx:id="cFechaDatePicker" layoutX="134.0" layoutY="112.0" prefHeight="25.0" prefWidth="141.0" />
+                        <DatePicker fx:id="cFechaDatePicker" disable="true" layoutX="134.0" layoutY="112.0" prefHeight="25.0" prefWidth="141.0" />
                      </children></AnchorPane>
                </content>
             </Tab>
