--- a/Tienda/src/main/resources/com/svalero/tienda/tienda/tienda.fxml
+++ b/Tienda/src/main/resources/com/svalero/tienda/tienda/tienda.fxml
@@ -29,7 +29,7 @@
                         <Button fx:id="pGuardarButton" layoutX="92.0" layoutY="254.0" mnemonicParsing="false" onAction="#guardarProducto" text="Guardar" />
                         <Button fx:id="pEliminarButton" layoutX="241.0" layoutY="254.0" mnemonicParsing="false" onAction="#eliminarProducto" text="Eliminar" />
                         <Button fx:id="pModificarButton" layoutX="166.0" layoutY="254.0" mnemonicParsing="false" onAction="#modificarProducto" text="Modificar" />
-                        <ListView fx:id="pListView" layoutX="308.0" layoutY="20.0" prefHeight="282.0" prefWidth="280.0" />
+                        <ListView fx:id="pListView" layoutX="308.0" layoutY="20.0" onMouseClicked="#productosClick" prefHeight="282.0" prefWidth="280.0" />
                         <TextField fx:id="pNombreField" editable="false" layoutX="77.0" layoutY="37.0" />
                         <TextField fx:id="pTipoField" editable="false" layoutX="77.0" layoutY="74.0" />
                         <TextField fx:id="pPrecioField" editable="false" layoutX="74.0" layoutY="114.0" />
@@ -49,22 +49,20 @@
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
                         <Button fx:id="pedNuevoButton" layoutX="37.0" layoutY="281.0" mnemonicParsing="false" onAction="#nuevoPedido" text="Nuevo" />
-                        <DatePicker fx:id="pedFechaDatePicker" disable="true" layoutX="142.0" layoutY="237.0" prefHeight="25.0" prefWidth="149.0" />
+                        <DatePicker fx:id="pedFechaDatePicker" disable="true" layoutX="122.0" layoutY="229.0" prefHeight="25.0" prefWidth="149.0" />
                         <ListView fx:id="pedListView" layoutX="18.0" layoutY="14.0" onMouseClicked="#pedidosClick" prefHeight="114.0" prefWidth="569.0" />
                         <Label layoutX="32.0" layoutY="143.0" text="Número pedido*" />
                         <TextField fx:id="pedNumField" editable="false" layoutX="134.0" layoutY="139.0" prefHeight="25.0" prefWidth="125.0" />
                         <Button fx:id="pedEliminarButton" layoutX="265.0" layoutY="281.0" mnemonicParsing="false" onAction="#eliminarPedido" text="Eliminar" />
                         <Button fx:id="pedModificarButton" layoutX="178.0" layoutY="281.0" mnemonicParsing="false" onAction="#modificarPedido" text="Modificar" />
                         <Button fx:id="pedGuardarButton" layoutX="102.0" layoutY="281.0" mnemonicParsing="false" onAction="#guardarPedido" text="Guardar" />
-                        <Label layoutX="38.0" layoutY="241.0" text="Fecha pedido" />
-                        <Label layoutX="47.0" layoutY="176.0" text="Entregado" />
+                        <Label layoutX="39.0" layoutY="233.0" text="Fecha pedido" />
+                        <Label layoutX="47.0" layoutY="185.0" text="Entregado" />
                         <Label layoutX="363.0" layoutY="143.0" text="Precio*" />
                         <TextField fx:id="pedPrecioField" editable="false" layoutX="419.0" layoutY="139.0" prefHeight="25.0" prefWidth="125.0" />
-                        <CheckBox fx:id="pedEntregadoCheckBox" disable="true" layoutX="152.0" layoutY="176.0" mnemonicParsing="false" />
+                        <CheckBox fx:id="pedEntregadoCheckBox" disable="true" layoutX="125.0" layoutY="185.0" mnemonicParsing="false" />
                         <Label layoutX="363.0" layoutY="176.0" text="Observaciones" />
                         <TextArea fx:id="pedObsTArea" editable="false" layoutX="363.0" layoutY="204.0" prefHeight="100.0" prefWidth="200.0" />
-                        <TextField fx:id="idClienteField" layoutX="142.0" layoutY="204.0" prefHeight="25.0" prefWidth="60.0" />
-                        <Label layoutX="49.0" layoutY="208.0" text="Id Cliente" />
                      </children></AnchorPane>
                </content>
             </Tab>
