--- a/Tienda/src/main/resources/com/svalero/tienda/tienda/tienda.fxml
+++ b/Tienda/src/main/resources/com/svalero/tienda/tienda/tienda.fxml
@@ -32,7 +32,7 @@
                         <ListView fx:id="pListView" layoutX="308.0" layoutY="20.0" onMouseClicked="#productosClick" prefHeight="282.0" prefWidth="280.0" />
                         <TextField fx:id="pNombreField" editable="false" layoutX="77.0" layoutY="37.0" />
                         <TextField fx:id="pTipoField" editable="false" layoutX="77.0" layoutY="74.0" />
-                        <TextField fx:id="pPrecioField" editable="false" layoutX="74.0" layoutY="114.0" />
+                        <TextField fx:id="pPrecioField" editable="false" layoutX="77.0" layoutY="114.0" />
                         <Label layoutX="16.0" layoutY="41.0" text="Nombre*" />
                         <Label layoutX="23.0" layoutY="152.0" text="Stock" />
                         <Label layoutX="21.0" layoutY="118.0" text="Precio*" />
@@ -48,21 +48,23 @@
                <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <Button fx:id="pedNuevoButton" layoutX="37.0" layoutY="281.0" mnemonicParsing="false" onAction="#nuevoPedido" text="Nuevo" />
-                        <DatePicker fx:id="pedFechaDatePicker" disable="true" layoutX="122.0" layoutY="229.0" prefHeight="25.0" prefWidth="149.0" />
+                        <Button fx:id="pedNuevoButton" layoutX="36.0" layoutY="291.0" mnemonicParsing="false" onAction="#nuevoPedido" text="Nuevo" />
+                        <DatePicker fx:id="pedFechaDatePicker" disable="true" layoutX="122.0" layoutY="253.0" prefHeight="25.0" prefWidth="149.0" />
                         <ListView fx:id="pedListView" layoutX="18.0" layoutY="14.0" onMouseClicked="#pedidosClick" prefHeight="114.0" prefWidth="569.0" />
-                        <Label layoutX="32.0" layoutY="143.0" text="Número pedido*" />
-                        <TextField fx:id="pedNumField" editable="false" layoutX="134.0" layoutY="139.0" prefHeight="25.0" prefWidth="125.0" />
-                        <Button fx:id="pedEliminarButton" layoutX="265.0" layoutY="281.0" mnemonicParsing="false" onAction="#eliminarPedido" text="Eliminar" />
-                        <Button fx:id="pedModificarButton" layoutX="178.0" layoutY="281.0" mnemonicParsing="false" onAction="#modificarPedido" text="Modificar" />
-                        <Button fx:id="pedGuardarButton" layoutX="102.0" layoutY="281.0" mnemonicParsing="false" onAction="#guardarPedido" text="Guardar" />
-                        <Label layoutX="39.0" layoutY="233.0" text="Fecha pedido" />
-                        <Label layoutX="47.0" layoutY="185.0" text="Entregado" />
+                        <Label layoutX="34.0" layoutY="155.0" text="Número pedido*" />
+                        <TextField fx:id="pedNumField" editable="false" layoutX="134.0" layoutY="147.0" prefHeight="25.0" prefWidth="125.0" />
+                        <Button fx:id="pedEliminarButton" layoutX="252.0" layoutY="291.0" mnemonicParsing="false" onAction="#eliminarPedido" text="Eliminar" />
+                        <Button fx:id="pedModificarButton" layoutX="171.0" layoutY="291.0" mnemonicParsing="false" onAction="#modificarPedido" text="Modificar" />
+                        <Button fx:id="pedGuardarButton" layoutX="97.0" layoutY="291.0" mnemonicParsing="false" onAction="#guardarPedido" text="Guardar" />
+                        <Label layoutX="34.0" layoutY="257.0" text="Fecha pedido*" />
+                        <Label layoutX="35.0" layoutY="183.0" text="Entregado" />
                         <Label layoutX="363.0" layoutY="143.0" text="Precio*" />
                         <TextField fx:id="pedPrecioField" editable="false" layoutX="419.0" layoutY="139.0" prefHeight="25.0" prefWidth="125.0" />
-                        <CheckBox fx:id="pedEntregadoCheckBox" disable="true" layoutX="125.0" layoutY="185.0" mnemonicParsing="false" />
+                        <CheckBox fx:id="pedEntregadoCheckBox" disable="true" layoutX="126.0" layoutY="184.0" mnemonicParsing="false" />
                         <Label layoutX="363.0" layoutY="176.0" text="Observaciones" />
                         <TextArea fx:id="pedObsTArea" editable="false" layoutX="363.0" layoutY="204.0" prefHeight="100.0" prefWidth="200.0" />
+                        <TextField fx:id="idClienteField" layoutX="118.0" layoutY="218.0" prefHeight="25.0" prefWidth="90.0" />
+                        <Label layoutX="34.0" layoutY="222.0" text="Id Cliente*" />
                      </children></AnchorPane>
                </content>
             </Tab>
@@ -73,9 +75,9 @@
                         <Button fx:id="cNuevoButton" layoutX="17.0" layoutY="264.0" mnemonicParsing="false" onAction="#nuevoCliente" text="Nuevo" />
                         <Label layoutX="20.0" layoutY="37.0" text="Nombre*" />
                         <Label layoutX="17.0" layoutY="75.0" text="Apellidos*" />
-                        <Label layoutX="17.0" layoutY="116.0" text="Fecha de nacimiento" />
+                        <Label layoutX="17.0" layoutY="116.0" text="Fecha de nacimiento*" />
                         <Label layoutX="18.0" layoutY="167.0" text="Email*" />
-                        <Label layoutX="18.0" layoutY="216.0" text="Teléfono" />
+                        <Label layoutX="18.0" layoutY="216.0" text="Teléfono*" />
                         <Button fx:id="cGuardarButton" layoutX="82.0" layoutY="264.0" mnemonicParsing="false" onAction="#guardarCliente" text="Guardar" />
                         <Button fx:id="cEliminarButton" layoutX="231.0" layoutY="264.0" mnemonicParsing="false" onAction="#eliminarCliente" text="Eliminar" />
                         <Button fx:id="cModificarButton" layoutX="156.0" layoutY="264.0" mnemonicParsing="false" onAction="#modificarCliente" text="Modificar" />
